{{$NEXT}}

3.007     2017-10-25 18:03:12+02:00 Europe/Prague

3.006     2017-07-11 12:46:15+02:00 Europe/Prague

Features:
* Feature 'case': added values 'equ' and 'cmp', newly defined in UD v2.
* Feature 'degree': added value 'equ', newly defined in UD v2.
* Feature 'definite': added value 'spec', newly defined in UD v2.
* Feature 'number': added values 'count', 'tri', 'pauc', 'grpa', 'grpl' and
  'inv', newly defined in UD v2.
* Feature 'mood': added values 'prp' and 'adm', newly defined in UD v2.
* Feature 'aspect': added values 'hab' and 'iter', newly defined in UD v2.
* Feature 'voice': added values 'antip', 'dir' and 'inv', newly defined in UD
  v2.
* Feature 'person': added values '0' and '4', newly defined in UD v2.
* Feature 'tense': removed value 'nar'; in UD v2, it should be encoded as the
  past tense + the non-firsthand evidentiality feature.
* Added feature 'evident', newly defined in UD v2.

Interface:
* Added the is_...() methods for the new feature values.



3.005     2017-07-08 22:05:24+02:00 Europe/Prague

Features:
* In line with Universal Dependencies, the single-value features' value is no
  longer identical to the feature name; instead, it is 'yes'. For example,
  'reflex=reflex' is substituted by 'reflex=yes'. The change involves features:
  'reflex', 'poss', 'abbr', 'foreign', 'hyph', 'typo'.



3.004     2017-02-08 15:25:24+01:00 Europe/Prague

Features:
* In line with Universal Dependencies v2, added value 'vnoun' of feature
  'verbform' (verbal noun). The value 'ger' is still available but slightly
  deprecated (if something is traditionally called gerund but can be plausibly
  called verbal noun, it should be labeled 'vnoun').



3.003     2017-01-18 07:27:27+01:00 Europe/Prague

Fixes:
* Reading (setting) old feature-value pairs politeness=inf|pol and converting
  them internally to polite=infm|form.



3.002     2017-01-16 20:30:08+01:00 Europe/Prague

Features: