@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+Features:
+* Added feature 'clusivity' (inclusive vs. exclusive pronoun "we").
+
 3.007     2017-10-25 18:03:12+02:00 Europe/Prague
 
 3.006     2017-07-11 12:46:15+02:00 Europe/Prague
